⟨0.28⟩ §3.1: a PREFIX locator resolves to the whole set, unioned — for every verb
Measured before the change, two sibling reports under one prefix with the
Exec-performing function in the second:

    where Exec --report <prefix> --json
      stderr: candor: locator `…` matches 2 reports; using <first>
      stdout: {"effect":"Exec","directly":[],"inherited":[]}      exit 0

"nothing performs Exec", over a locator that names the report where something
does. ⟨0.24⟩ ruled the union for the gate and the advisory ENVELOPE; every
other verb kept expandPrefix's lexicographic pick — two contracts wearing one
flag, the quiet one under-reporting by construction.

Now every single-report verb resolves through locatorReportSet — the gate's
OWN resolver, so the two cannot drift — and loads the UNION. The sidecars
travel with it (loadCallgraph/loadHierarchy/fixGraph/rawUnknownWhy gain set
forms; callers/tour/whatif/fix/fix-gate/unverified take the loaded set), which
is exactly the under-report the old per-verb scoping note predicted if entries
were unioned alone. unverified now also answers HOLES from the whole set, and
its --class loud contract covers an unreadable member.

Load is LENIENT per member for these verbs (the gate stays fail-loud — it is
certifying): an unreadable sibling is disclosed on stderr and hedges the
answer INCOMPLETE through the standing ReportCompleteness channel; only a set
with NO readable member keeps the pre-change loud exit 2, so a FILE locator
naming one unreadable report fails with the identical message. A FILE locator
never unions its prefix siblings — verified (already right) and pinned.

A/A: 41-case control set byte-identical pre/post except the measured items
(prefix answers, the new stderr disclosure, and the build-hash provenance).
Exits identical on every control. Falsified: 5 of 7 new tests fail on the
pre-change source; the 2 that pass pin the FILE-form and loud-single-file
behaviour that must not change.

Co-Authored-By: Claude Opus 5 <n